--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javascript</title>
+    <title>Javascript Projects</title>
 </head>
 <body>
-    
+    <h1>Javascript Projects</h1>
+    <a href="./prj01/index.html" target="blank">Form Validation Page</a>
 </body>
 </html>
