Javascript coding implement
we start javascript

--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/root.css">
     <title>Javascript Projects</title>
 </head>
 <body>
     <h1>Javascript Projects</h1>
-    <a href="./prj01/index.html" target="blank">Form Validation Page</a>
+    <ol>
+        <li ><a href="./prj01/index.html" target="blank" class="index-list ">Form Validation Page</a></li>
+    </ol>
+    
 </body>
 </html>
