--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Javascript Projects</h1>
     <ol>
         <li ><a href="./prj01/index.html" target="blank" class="index-list ">Form Validation Page</a></li>
+        <li ><a href="./prj02/index.html" target="blank" class="index-list ">Cinema Seat Selection Project</a></li>
     </ol>
     
 </body>
