--- a/prj01/index.html
+++ b/prj01/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="link rel=preconnect" href="https://fonts.gstatic.com"> -->
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./stylesheet.css">
     
     <title>Form Validation</title>
@@ -16,23 +16,23 @@
         <form action="" id="form" class="form">
             <h1>Sign Up</h1>
             <div class="form-input" id="form-input">
-                <label for="user_name">User Name: </label>
-                <input type="text" id="user_name"  placeholder="Enter Your Name">
+                <label for="User_Name">User Name: </label>
+                <input type="text" id="User_Name"  placeholder="Enter Your Name">
                 <small>Error Message</small>
             </div>
             <div class="form-input " id="form-input">
-                <label for="email">Email: </label>
-                <input type="text" id="email" placeholder="Enter Your Email">
+                <label for="Email">Email: </label>
+                <input type="text" id="Email" placeholder="Enter Your Email">
                 <small>Error Message</small>
             </div>
             <div class="form-input"id="form-input">
-                <label for="password1">Password: </label>
-                <input type="password" id="password1" placeholder="Enter password">
+                <label for="Password">Password: </label>
+                <input type="password" id="Password" placeholder="Enter password">
                 <small>Error Message</small>
             </div>
             <div class="form-input"id="form-input">
-                <label for="password2">Confirm Password: </label>
-                <input type="password" id="password2" placeholder="Enter password again">
+                <label for="Confirm_Password">Confirm Password: </label>
+                <input type="password" id="Confirm_Password" placeholder="Enter password again">
                 <small>Error Message</small>
             </div>
             <button class="submit">Submit</button>
