we Create New Project
this project purpose is buying Tickets.

--- a/prj02/index.html
+++ b/prj02/index.html
@@ -94,7 +94,7 @@
             </div>
         </div>
         
-        <p class="amountpara">You have selected <span class="count">0</span> seats of Total price is <span class="total_amount">$0</span>.</p>
+        <p class="amountpara">You have selected <span id="count">0</span> seats of Total price is <span id="total_amount">$0</span>.</p>
     </div>
 
     <script src="./script.js"></script>
