--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <li ><a href="./prj01/index.html" target="blank" class="index-list ">Form Validation Page</a></li>
         <li ><a href="./prj02/index.html" target="blank" class="index-list ">Cinema Seat Selection Project</a></li>
         <li ><a href="./prj03/index.html" target="blank" class="index-list ">Custom Video Player</a></li>
+        <li ><a href="./prj04/index.html" target="blank" class="index-list ">Currency Exchanger</a></li>
+        <li ><a href="./prj05/index.html" target="blank" class="index-list ">Project 5</a></li>
+
     </ol>
     
 </body>
