--- a/prj04/index.html
+++ b/prj04/index.html
@@ -16,7 +16,7 @@
     <div class="container">
 
         <div class="currency-image">
-            <img src="../assests/4351310.png"alt="image_currency_exchange" class="currency_image">
+            <img src="../assests/4351310.png" alt="image_currency_exchange" class="currency_image">
         </div>
         <div class="para">
             <p>Lets put your currency unit and you wil get Currency exhange rate and calculate also.</p>
@@ -143,8 +143,159 @@
             </select>
             <input type="number" class="amount1" id="amount2" value="0">
         </div>
+        <button class="btn next">next</button>
     </div>
-    
+    <section class="bitcoin-section">
+        <div class="container">
+
+            <div class="currency-image">
+                <img src="../assests/bitcoin-icon-png-26.jpg" alt="image_currency_exchange" class="currency_image">
+            </div>
+            <div class="para">
+                <p>Lets put your currency unit and you wil get Currency exhange rate and calculate also.</p>
+            </div>
+            <div class="button-calculaterate">
+                <div class="flip-btn">
+                    <button class="btn" id="bit-flip">
+                        Flip <i class="fas fa-exchange-alt"></i>
+                    </button>
+                </div>
+                <div class="calculaterate" id="bitcalculaterate"></div>
+            </div>
+            <div class="currency">
+                <select id="bitcurrencyOne" class="currencyOne">
+                    <option value='BTC' selected>BTC - Bitcoin</option>
+                    <option value='ETH'>ETH - Ethereum</option>
+                    <option value='USDT'>USDT - Tether</option>
+                    <option value='BNB'>BNB - Binance Coin</option>
+                    <option value='ADA'>ADA - Cardano</option>
+                    <option value='DOGE'>DOGE - Dogecoin</option>
+                    <option value='XRP'>XRP - XRP</option>
+                    <option value='USDC'>USDC - USD Coin</option>
+                    <option value='DOT'>DOT - Polkadot</option>
+                    <option value='UNI'>UNI - Uniswap</option>
+                    <option value='BUSD'>BUSD - Binance USD</option>
+                    <option value='BCH'>BCH - Bitcoin Cash</option>
+                    <option value='LTC'>LTC - Litecoin</option>
+                    <option value='SOL'>SOL - Solana</option>
+                    <option value='LINK'>LINK - Chainlink</option>
+                    <option value='MATIC'>MATIC - Polygon</option>
+                    <option value='THETA'>THETA - THETA</option>
+                    <option value='WBTC'>WBTC - Wrapped Bitcoin</option>
+                    <option value='XLM'>XLM - Stellar</option>
+                    <option value='VET'>VET - VeChain</option>
+                    <option value='ICP'>ICP - Internet Computer</option>
+                    <option value='ETC'>ETC - Ethereum Classic</option>
+                    <option value='DAI'>DAI - Dai</option>
+                    <option value='FIL'>FIL - Filecoin</option>
+                    <option value='TRX'>TRX - TRON</option>
+                    <option value='XMR'>XMR - Monero</option>
+                    <option value='EOS'>EOS - EOS</option>
+                    <option value='AMP'>AMP - Amp</option>
+                    <option value='AAVE'>AAVE - Aave</option>
+                    <option value='TFUEL'>TFUEL - Theta Fuel</option>
+                    <option value='SHIB'>SHIB - SHIBA INU</option>
+                    <option value='NEO'>NEO - Neo</option>
+                    <option value='ALGO'>ALGO - Algorand</option>
+                    <option value='CAKE'>CAKE - PancakeSwap</option>
+                    <option value='BSV'>BSV - Bitcoin SV</option>
+                    <option value='FTT'>FTT - FTX Token</option>
+                    <option value='CRO'>CRO - Crypto.com Coin</option>
+                    <option value='BTCB'>BTCB - Bitcoin BEP2</option>
+                    <option value='XTZ'>XTZ - Tezos</option>
+                    <option value='LEO'>LEO - UNUS SED LEO</option>
+                    <option value='MKR'>MKR - Maker</option>
+                    <option value='MIOTA'>MIOTA - IOTA</option>
+                    <option value='ATOM'>ATOM - Cosmos</option>
+                    <option value='KSM'>KSM - Kusama</option>
+                    <option value='LUNA'>LUNA - Terra</option>
+                    <option value='KLAY'>KLAY - Klaytn</option>
+                    <option value='AVAX'>AVAX - Avalanche</option>
+                    <option value='UST'>UST - TerraUSD</option>
+                    <option value='HT'>HT - Huobi Token</option>
+                    <option value='WAVES'>WAVES - Waves</option>
+                    <option value='BTT'>BTT - BitTorrent</option>
+                    <option value='GRT'>GRT - The Graph</option>
+                    <option value='RUNE'>RUNE - THORChain</option>
+                    <option value='CHZ'>CHZ - Chiliz</option>
+                    <option value='HBAR'>HBAR - Hedera Hashgraph</option>
+                    <option value='DCR'>DCR - Decred</option>
+                    <option value='CEL'>CEL - Celsius</option>
+                    <option value='TUSD'>TUSD - TrueUSD</option>
+                    <option value='DASH'>DASH - Dash</option>
+                    <option value='TEL'>TEL - Telcoin</option>
+                    <option value='ZEC'>ZEC - Zcash</option>
+                    <option value='COMP'>COMP - Compound</option>
+                    <option value='EGLD'>EGLD - Elrond</option>
+                    <option value='HOT'>HOT - Holo</option>
+                    <option value='YFI'>YFI - yearn.finance</option>
+                    <option value='XEM'>XEM - NEM</option>
+                    <option value='HNT'>HNT - Helium</option>
+                    <option value='NEAR'>NEAR - NEAR Protocol</option>
+                    <option value='ZIL'>ZIL - Zilliqa</option>
+                </select>
+                <input type="number" class="amount1" id="bitamount1" value="1">
+            </div>
+            <div class="currency">
+                <select id="bitcurrencyTwo" class="currencyTwo">
+                    <option value='EUR'>EUR - Cyprus</option>
+                    <option value='EUR'>EUR - Estonia</option>
+                    <option value='EUR'>EUR - Finland</option>
+                    <option value='EUR'>EUR - France</option>
+                    <option value='EUR'>EUR - Greece</option>
+                    <option value='EUR'>EUR - Ireland</option>
+                    <option value='EUR'>EUR - Italy</option>
+                    <option value='EUR'>EUR - Latvia</option>
+                    <option value='EUR'>EUR - Lithuania</option>
+                    <option value='EUR'>EUR - Luxembourg</option>
+                    <option value='EUR'>EUR - Malta</option>
+                    <option value='EUR'>EUR - Netherlands</option>
+                    <option value='EUR'>EUR - Portugal</option>
+                    <option value='EUR'>EUR - Slovakia</option>
+                    <option value='EUR'>EUR - Slovenia</option>
+                    <option value='EUR'>EUR - Spain</option>
+                    <option value='FJD'>FJD - Fiji</option>
+                    <option value='GBP'>GBP - United Kingdom</option>
+                    <option value='GTQ'>GTQ - Guatemala</option>
+                    <option value='HKD'>HKD - Hong Kong</option>
+                    <option value='HRK'>HRK - Croatia</option>
+                    <option value='HUF'>HUF - Hungary</option>
+                    <option value='IDR'>IDR - Indonesia</option>
+                    <option value='ILS'>ILS - Israel</option>
+                    <option value='INR'>INR - India</option>
+                    <option value='ISK'>ISK - Iceland</option>
+                    <option value='JPY'>JPY - Japan</option>
+                    <option value='KRW'>KRW - South Korea</option>
+                    <option value='KZT'>KZT - Kazakhstan</option>
+                    <option value='MVR'>MVR - Maldives</option>
+                    <option value='MXN'>MXN - Mexico</option>
+                    <option value='MYR'>MYR - Malaysia</option>
+                    <option value='NOK'>NOK - Norway</option>
+                    <option value='NZD'>NZD - New Zealand</option>
+                    <option value='PAB'>PAB - Panama</option>
+                    <option value='PEN'>PEN - Peru</option>
+                    <option value='PHP'>PHP - Philippines</option>
+                    <option value='PKR' selected>PKR - Pakistan</option>
+                    <option value='PLN'>PLN - Poland</option>
+                    <option value='PYG'>PYG - Paraguay</option>
+                    <option value='RON'>RON - Romania</option>
+                    <option value='RUB'>RUB - Russia</option>
+                    <option value='SAR'>SAR - Saudi Arabia</option>
+                    <option value='SEK'>SEK - Sweden</option>
+                    <option value='SGD'>SGD - Singapore</option>
+                    <option value='THB'>THB - Thailand</option>
+                    <option value='TRY'>TRY - Turkey</option>
+                    <option value='TWD'>TWD - Taiwan</option>
+                    <option value='UAH'>UAH - Ukraine</option>
+                    <option value='USD'>USD - United States</option>
+                    <option value='UYU'>UYU - Uruguay</option>
+                    <option value='ZAR'>ZAR - South Africa</option>
+                </select>
+                <input type="number" class="amount1" id="bitamount2" value="0">
+            </div>
+    </section>
+    <script src="./script.js"></script>
+    <script src="./bitcoinscript.js"></script>
 </body>
 
 </html>
