--- a/prj04/index.html
+++ b/prj04/index.html
@@ -145,7 +145,7 @@
         </div>
         <button class="btn next">next</button>
     </div>
-    <section class="bitcoin-section">
+    <!-- <section class="bitcoin-section">
         <div class="container">
 
             <div class="currency-image">
@@ -293,9 +293,9 @@
                 </select>
                 <input type="number" class="amount1" id="bitamount2" value="0">
             </div>
-    </section>
+    </section> -->
     <script src="./script.js"></script>
-    <script src="./bitcoinscript.js"></script>
+    <!-- <script src="./bitcoinscript.js"></script> -->
 </body>
 
 </html>
