--- a/prj05/index.html
+++ b/prj05/index.html
@@ -8,7 +8,7 @@
     <title>Random Millionar List Entry</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="../Font Awesome/fontawesome-free-5.15.3-web/fontawesome-free-5.15.3-web/css/all.css">
+    <!-- <link rel="stylesheet" href="../Font Awesome/fontawesome-free-5.15.3-web/fontawesome-free-5.15.3-web/css/all.css"> -->
 </head>
 <body>
     <h1>High Order Array Method</h1>
@@ -19,11 +19,14 @@
             <button class="btn" id="showMillionaries" >Show Millionaries Only</button>
             <button class="btn" id="sort" >Sort by Richest</button>
             <button class="btn" id="Calculate-total" >Calculate Total Wealth</button>
+            <button class="btn" id="clearIt" >Clear</button>
         </aside>
-        <div class="main" id='main'>
-            <h2><strong>Name</strong>Worth</h2>
-        </div> 
+        <main class="main" id='main'>
+            <h2><strong>Name</strong>Net Worth</h2>
+            
+        </main> 
     </div>
+    
     <script src="./script.js"></script>
 </body>
 </html>
