--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li ><a href="./prj05/index.html" target="blank" class="index-list ">Random user Income Calculator</a></li>
         <li ><a href="./prj06/index.html" target="blank" class="index-list ">Landing Page</a></li>
         <li ><a href="./prj07/index.html" target="blank" class="index-list ">Hangman Game</a></li>
+        <li ><a href="./prj08/index.html" target="blank" class="index-list ">Food Category Searh Web</a></li>
         
     </ol>
     
