Project 9 and Project 10 Completed

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li ><a href="./prj06/index.html" target="blank" class="index-list ">Landing Page</a></li>
         <li ><a href="./prj07/index.html" target="blank" class="index-list ">Hangman Game</a></li>
         <li ><a href="./prj08/index.html" target="blank" class="index-list ">Food Category Searh Web</a></li>
-        
+        <li ><a href="./prj09/index.html" target="blank" class="index-list ">Expence Tracker</a></li>
     </ol>
     
 </body>
