--- a/prj02/index.html
+++ b/prj02/index.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../Font Awesome/fontawesome-free-5.15.3-web/fontawesome-free-5.15.3-web/css/all.css">
     <link rel="stylesheet" href="./style.css">
     <title>Seat Selection project</title>
 </head>
 <body>
+    <button class="home"><a href="../index.html"><i class="fas fa-undo"></i></a></button>
+    <span class="author">Created by M.Waqar Khan</span>
     <div class="seat-container">
         <label for="Movies">Please Select Your Movie</label>
 
