--- a/prj10/index.html
+++ b/prj10/index.html
@@ -41,12 +41,12 @@
             <button id="forward"><i class="fas fa-forward" ></i></button>
             <!-- <i class="fas fa-volume-mute"></i> -->
             <button id="shuffle"><i class="fas fa-random" ></i></button>
-            <button id='listArrow'><i class="fas fa-arrow-down" ></i></button>
+            <button id='listArrow' class="showlist"><a href="#list"><i class="fas fa-arrow-down" ></i></a></button>
             
         </div>
     </div>
     <section class="songs-list-container">
-        <h1>Songs List</h1>
+        <h1 id="listheader">Songs List</h1>
         <ul class="list" id="list">
             <li class="songlist"><a href="" class="song-list-link">
                 <div class="list-img">
