--- a/prj10/index.html
+++ b/prj10/index.html
@@ -102,6 +102,42 @@
                 </div>
             </a>
             </li>
+            <li class="songlist"><a href="" class="song-list-link">
+                <div class="list-img">
+                    <img src="./images/Dirilis Ertugrul.jpg" alt="Ampyx - Rise/jpg">
+                </div>
+                <div class="song-list-head">
+                    <h2 class="title" >Dirilis Ertugrul</h2>
+                </div>
+            </a>
+            </li>
+            <li class="songlist"><a href="" class="song-list-link">
+                <div class="list-img">
+                    <img src="./images/Kurulus Osman.jpg" alt="Ampyx - Rise/jpg">
+                </div>
+                <div class="song-list-head">
+                    <h2 class="title" >Kurulus Osman</h2>
+                </div>
+            </a>
+            </li>
+            <li class="songlist"><a href="" class="song-list-link">
+                <div class="list-img">
+                    <img src="./images/Pirates of the Caribbean.jpg" alt="Ampyx - Rise/jpg">
+                </div>
+                <div class="song-list-head">
+                    <h2 class="title" >Pirates of the Caribbean</h2>
+                </div>
+            </a>
+            </li>
+            <li class="songlist"><a href="" class="song-list-link">
+                <div class="list-img">
+                    <img src="./images/The Dark Knight.jpg" alt="Ampyx - Rise/jpg">
+                </div>
+                <div class="song-list-head">
+                    <h2 class="title" >The Dark Knight</h2>
+                </div>
+            </a>
+            </li>
         </ul>
     </section>
 
